update: update project

--- a/christmas-task/index.html
+++ b/christmas-task/index.html
@@ -36,8 +36,7 @@
               <div class="filter-container-content">
 
                 <div class="settings">
-                  <button class="audio"></button>
-                  <!-- <button class="snow" id="snow"></button> -->
+                  <button class="audio" data-audio="toys"></button>
                   <div class="search">
                     <input type="text" name="search" id="search" placeholder="Поиск" autocomplete="off" class="search-item">
                     <div class="clean-icon"></div>
@@ -173,7 +172,8 @@
               <div class="settings-container-wrapper">
   
                 <div class="settings settings-tree-page">
-                  <button class="audio" id="audio"></button>
+                  <audio id="beep" src="assets/images/0b81358ae1a7a0c4e7afchristmas.mp3"></audio>
+                  <button class="audio" data-audio="tree"></button>
                   <button class="snow"></button>
                 </div>
       
