feat: add logic to create 100 cars

--- a/async-race/src/index.html
+++ b/async-race/src/index.html
@@ -38,8 +38,13 @@
                 </div>
 
                 <div class="garage-cars" id="garage-car">
-                    <h2 class="title">Garage (4)</h2>
-                    <h3 class="subtitle">Page #1</h3>
+                    <h2 class="title" id="countCarsToGarage">Garage (4)</h2>
+                    <h3 class="subtitle" id="page">Page #1</h3>
+                </div>
+
+                <div class="controll-pages">
+                    <button class="controll disabled" id="prev-page" disabled>Prev page</button>
+                    <button class="controll disabled" id="next-page" disabled>Next page</button>
                 </div>
 
             </section>
