feat: add logic to state a buttons

--- a/async-race/src/index.html
+++ b/async-race/src/index.html
@@ -47,6 +47,8 @@
                     <button class="controll disabled" id="next-page" disabled>Next page</button>
                 </div>
 
+                <h4 class="winner" id="winner-car"></h4>
+
             </section>
         </div>
     </main>
