refactor: change rendering a html file

--- a/async-race/src/index.html
+++ b/async-race/src/index.html
@@ -7,7 +7,7 @@
     <title>Async-race</title>
 </head>
 <body>
-    <header>
+    <!-- <header>
         <div class="wrapper">
             <div class="header-container">
                 <button class="render-page">Garage</button>
@@ -32,7 +32,7 @@
                     </div>
                     <div class="controlls-btn">
                         <button class="start-btn" id="race">Race</button>
-                        <button class="start-btn" id="reset">Reset</button>
+                        <button class="start-btn disabled" id="reset" disabled>Reset</button>
                         <button class="generate-btn" id="generate-cars">Generate cars</button>
                     </div>
                 </div>
@@ -51,7 +51,7 @@
 
             </section>
         </div>
-    </main>
+    </main> -->
     
 </body>
 </html>
